WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157164
[RTL Scrollbars] REGRESSION(
r200116
): Positioned contents can overlap RTL scrollbars
https://bugs.webkit.org/show_bug.cgi?id=157164
Summary
[RTL Scrollbars] REGRESSION(r200116): Positioned contents can overlap RTL scr...
Myles C. Maxfield
Reported
2016-04-29 00:06:07 PDT
[RTL Scrollbars] Positioned contents can overlap RTL scrollbars
Attachments
Patch
(8.69 KB, patch)
2016-04-29 00:11 PDT
,
Myles C. Maxfield
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2016-04-29 00:11:23 PDT
Created
attachment 277679
[details]
Patch
Myles C. Maxfield
Comment 2
2016-04-29 00:12:13 PDT
Comment on
attachment 277679
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=277679&action=review
> Source/WebCore/ChangeLog:4 > +
https://bugs.webkit.org/show_bug.cgi?id=157164
Needs the radar number.
Darin Adler
Comment 3
2016-04-29 00:17:19 PDT
Comment on
attachment 277679
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=277679&action=review
> Source/WebCore/ChangeLog:11 > + attribute in
r200116
, these assumtions were no longer valid.
Typo: "assumtions"
Myles C. Maxfield
Comment 4
2016-04-29 13:33:17 PDT
Committed
r200261
: <
http://trac.webkit.org/changeset/200261
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug